--- a/portfolio.html
+++ b/portfolio.html
@@ -20,180 +20,208 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav class="header-navigation">
-        <a href="./index.html" class="header-logo link">
-          Web<span class="header-logo-accent link">Studio</span></a
-        >
-        <ul class="header-nav-menu list">
-          <li class="header-nav-item">
-            <a href="./index.html" class="header-nav-link link">Studio</a>
-          </li>
-          <li class="header-nav-item">
-            <a href="./portfolio.html" class="header-nav-link link"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-nav-item">
-            <a href="" class="header-nav-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="header-address list">
-          <li class="header-address-item">
-            <a href="mailto:info@devstudio.com" class="header-address-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-address-item">
-            <a href="tel:+110001111111" class="header-address-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a href="./index.html" class="header-logo link">
+            WEB<span class="header-logo-accent link">Studio</span></a
+          >
+          <ul class="header-nav-menu list">
+            <li class="header-nav-item">
+              <a href="./index.html" class="header-nav-link link">Studio</a>
+            </li>
+            <li class="header-nav-item">
+              <a href="./portfolio.html" class="header-nav-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-nav-item">
+              <a href="" class="header-nav-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="header-address list">
+            <li class="header-address-item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="header-address-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address-item">
+              <a href="tel:+110001111111" class="header-address-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="portfolio">
-        <h1 hidden>Portfolio</h1>
-        <ul class="button-list list">
-          <li class="button-item link">
-            <button type="button" class="button-text">All</button>
-          </li>
-          <li class="button-item link">
-            <button type="button" class="button-text">Web Site</button>
-          </li>
-          <li class="button-item link">
-            <button type="button" class="button-text">App</button>
-          </li>
-          <li class="button-item link">
-            <button type="button" class="button-text">Design</button>
-          </li>
-          <li class="button-item link">
-            <button type="button" class="button-text">Marketing</button>
-          </li>
-        </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/banking.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
-              <p class="portfolio-text">App</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Cashless Payment</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/meditation.jpg"
-                alt="Meditation App"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Meditation App</h2>
-              <p class="portfolio-text">App</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Taxi Service</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Screen Illustrations</h2>
-              <p class="portfolio-text">Design</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/online.jpg"
-                alt="Online Courses"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Online Courses</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/instagram.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
-              <p class="portfolio-text">Design</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/organic.jpg"
-                alt="Organic Food"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Organic Food</h2>
-              <p class="portfolio-text">Web Site</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" target="_blank" class="link">
-              <img
-                src="./images/fresh.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                class="portfolio-img"
-              />
-              <h2 class="portfolio-subtitle">Fresh Coffee</h2>
-              <p class="portfolio-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 hidden>Portfolio</h1>
+          <ul class="button-list list">
+            <li class="button-item link">
+              <button type="button" class="button-text">All</button>
+            </li>
+            <li class="button-item link">
+              <button type="button" class="button-text">Web Site</button>
+            </li>
+            <li class="button-item link">
+              <button type="button" class="button-text">App</button>
+            </li>
+            <li class="button-item link">
+              <button type="button" class="button-text">Design</button>
+            </li>
+            <li class="button-item link">
+              <button type="button" class="button-text">Marketing</button>
+            </li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/banking.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">Cashless Payment</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">Meditation App</h2>
+                  <p class="portfolio-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">Taxi Service</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">Screen Illustrations</h2>
+                  <p class="portfolio-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/online.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">Online Courses</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/instagram.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
+                  <p class="portfolio-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/organic.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">Organic Food</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" class="link">
+                <img
+                  src="./images/fresh.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-container">
+                  <h2 class="portfolio-subtitle">Fresh Coffee</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        >Web<span class="footer-logo-accent">Studio</span></a
-      >
-      <p class="footer-slogan">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="./index.html" class="footer-logo link"
+          >Web<span class="footer-logo-accent">Studio</span></a
+        >
+        <p class="footer-slogan">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
