--- a/index.html
+++ b/index.html
@@ -139,8 +139,13 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img src="./images/Mark-Guerrero.jpg" alt="Mark Guerrero"
-              width="264" height="260" class-img" />
+              <img
+                src="./images/Mark-Guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+                class="team-img"
+              />
               <div class="team-list-container">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
