--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
     <main>
       <section class="portfolio">
         <div class="container">
-          <h1 hidden>Portfolio</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
           <ul class="button-list list">
             <li class="button-item link">
               <button type="button" class="button-text">All</button>
